src/test/deca/context/invalid/class/invalid_super_class_not_declared.deca
// Description:
//    Test of a class extending an undeclared class
//    Test rule 1.3
//
// Result:
// [Begin Result]
//invalid_super_class_not_declared.deca:14:0: Super class MySuperClass not declared. Rule 1.3.
// [End Result]
//
// History:
//    created on 12/01/2025


class MyClass extends MySuperClass {
     //MySuperClass is undefined
}

{
    //empty main
}
